# Titier

./: .gitignore  CHANGELOG.md  README.md  README.pt-br.md  README_tmp.html  requirements.txt
.github/workflows/: release.yml
app/: download_mmproj.py  install.sh  main.py  pyproject.toml  server.py
app/core/: agent.py  hardware.py  inference.py  model_manager.py  ocr_engine.py  pdf_processor.py  prompts.py  vision_ocr.py
app/db/: database.py  vector_store.py
app/utils/: downloader.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  link_styles.css  main.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: ChatSession.css  ChatSession.tsx  DebugMenu.css  DebugMenu.tsx  EmptyState.css  EmptyState.tsx  ErrorBoundary.tsx  Onboarding.css  Onboarding.tsx  PDFEditor.css  PDFEditor.tsx  ProcessingView.css  ProcessingView.tsx  Settings.css  Settings.tsx  SidebarMenu.css  SidebarMenu.tsx
frontend/src/utils/: pdfUtils.ts
scripts/: poc_highlights.py  test_deletion.py  test_highlights.py  test_ocr_performance.py  test_recommendation.py  verify_highlights_rag.py  verify_pdf_cleaning.py  verify_rag_limits.py
