[tool.poetry]
name = "titier-backend"
version = "0.1.0"
description = "Backend do assistente de estudos PDF AI com IA local"
authors = ["matheusdanoite"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.128.5"
uvicorn = "^0.40.0"
llama-cpp-python = "^0.3.6"
llama-index = "^0.14.13"
llama-index-llms-llama-cpp = "^0.4.1"
llama-index-embeddings-huggingface = "^0.5.1"
llama-index-vector-stores-qdrant = "^0.4.1"
llama-index-tools-google = "^0.4.0"
pymupdf = "^1.26.7"
pillow = "^11.1.0"
qdrant-client = "^1.16.2"
sentence-transformers = "^5.2.2"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.22"
huggingface-hub = "^1.4.1"
rapidocr-onnxruntime = "^1.4.4"
psutil = "^7.2.2"
pydantic = "^2.10.6"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.28.0"

[tool.poetry.scripts]
serve = "server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
